base/manifests/pod-several.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: caddy
spec:
  containers:
  - name: caddy
    image: caddy:alpine
    ports:
      - containerPort: 80
