base/manifests/rbac-serviceaccount.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-namespace

---
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  namespace: demo-namespace
spec:
  serviceAccountName: demo-serviceaccount
  containers:
  - name: demo-container
    image: bitnami/kubectl:latest
    command: ["sleep", "3600"]



# kubectl get pods ---> OK
# kubectl get pods -n default ---> NOT OK
# kubectl run test-pod --image=nginx ---> NOT OK

# Обновить права: добавить "create"
# kubectl run test-pod --image=nginx ---> OK
# kubectl get pods ---> OK
# kubectl delete pod test-pod ---> NOT OK
