base/manifests/configmap-several-services.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-1
  labels:
    appName: nginx
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
      name: http-port
    volumeMounts:
    - mountPath: /usr/share/nginx/html/
      readOnly: true
      name: index-volume
  volumes:
  - name: index-volume
    configMap:
      name: nginx-1-conf
      items:
      - key: index.html
        path: index.html

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  labels:
    appName: nginx
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
      name: http-port
    volumeMounts:
    - mountPath: /usr/share/nginx/html/
      readOnly: true
      name: index-volume
  volumes:
  - name: index-volume
    configMap:
      name: nginx-2-conf
      items:
      - key: index.html
        path: index.html

---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    appName: nginx
  ports:
  - port: 80
    targetPort: http-port
    nodePort: 30080
