base/manifests/configmap-single-service.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
          name: http
      volumeMounts:
        - mountPath: /usr/share/nginx/html/
          readOnly: true
          name: html
  volumes:
    - name: html
      configMap:
        name: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: http
      nodePort: 30080
