base/manifests/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ds
  labels:
    appName: nginx
spec:
  selector:
    matchLabels:
      appName: nginx
  template:
    metadata:
      labels:
        appName: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ds-svc
spec:
  type: NodePort
  selector:
    appName: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080

# watch kubectl get pods -o wide
# kubectl get svc -o wide
# kubectl get ds -o wide

# for pod in $(kubectl get pods -l appName=nginx -o jsonpath='{.items[*].metadata.name}'); do kubectl exec $pod -- sh -c 'echo $(hostname) > /usr/share/nginx/html/index.html'; done
