base/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    appName: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      appName: nginx
  template:
    metadata:
      labels:
        appName: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable # после создания заменить на caddy:alpine, применить изменения kubectl apply -f ...
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-svc
spec:
  type: NodePort
  selector:
    appName: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080

# kubectl rollout history deployment/nginx-deployment 
# kubectl rollout history deployment/nginx-deployment --revision <num>
# watch kubectl get pods -o wide
# kubectl rollout undo deployment/nginx-deployment --to-revision 1
