base/manifests/env-configmap.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes
  labels:
    appName: flatnotes
spec:
  containers:
  - name: flatnotes
    image: dullage/flatnotes:latest
    ports:
    - containerPort: 8080
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service
spec:
  type: NodePort
  selector:
    appName: flatnotes
  ports:
  - port: 8080
    targetPort: http
    nodePort: 30080
