base/manifests/probes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-rs-svc
spec:
  type: NodePort
  selector:
    appName: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080

# Ждать 5-10 минут, чтобы поды начали пересоздаваться. и то, если только отключить две ноды.
# Чтобы ускорить процесс: kubectl drain <node-name> --ignore-daemonsets
# Чтобы восстановить ноду: kubectl uncordon <node-name>

# Если изменить readinessProbe.httpGet.path на что-то несуществующее (например, /123), то страница не будет открываться. См. kubectl get pods -o wide
# Если изменить livenessProbe.httpGet.path (например, /123), то контейнеры в подах будут постоянно пересоздаваться (сначала примерно каждые periodSeconds * failureThreshold секунд, потом дольше). См. kubectl get pods -o wide и crictl ps на ноде, где запущен под.
