base/manifests/rbac-role-rolebinding-flatnotes.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flatnotes

---
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes
  namespace: flatnotes
  labels:
    appName: flatnotes
spec:
  containers:
  - name: flatnotes
    image: dullage/flatnotes:latest
    ports:
    - containerPort: 8080
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service
  namespace: flatnotes
spec:
  type: NodePort
  selector:
    appName: flatnotes
  ports:
  - port: 8080
    targetPort: http
    nodePort: 30080
