base/manifests/secret.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes
  labels:
    app: flatnotes
spec:
  containers:
  - name: flatnotes
    image: dullage/flatnotes:v5.5
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-service
spec:
  type: NodePort
  selector:
    app: flatnotes
  ports:
  - port: 8080
    targetPort: http
    nodePort: 30080
