base/manifests/service-clusterip-singlepod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    appName: nginx
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
      name: http-port

---
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service
spec:
  selector:
    appName: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: http-port
