base/manifests/service-nodeport-labels.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    appName: nginx
    appType: proxy
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
      name: http

---
apiVersion: v1
kind: Pod
metadata:
  name: caddy
  labels:
    appName: caddy
    appType: proxy
spec:
  containers:
  - name: caddy
    image: caddy:alpine
    ports:
      - containerPort: 80
        name: http

---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    appType: proxy
  ports:
  - port: 80
    targetPort: http
    nodePort: 30080
