base/manifests/service-nodeport-multipod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    appName: proxy
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
      name: http-port

---
apiVersion: v1
kind: Pod
metadata:
  name: caddy-pod
  labels:
    appName: proxy
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
      name: http-port

---
apiVersion: v1
kind: Service
metadata:
  name: node-port-service
spec:
  type: NodePort
  selector:
    appName: proxy
  ports:
  - port: 80
    targetPort: http-port
    nodePort: 30080
