base/manifests/service-nodeport.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    appName: nginx
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    appName: nginx
  ports:
  - port: 80
    targetPort: http
    nodePort: 30080
  
# kubectl exec nginx -it -- /bin/bash -c "echo "nodeport" > /usr/share/nginx/html/index.html"
# curl <внешний IP любой node>:30080
