base/manifests/storageclass-csi-nfs-reusage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes-pod-released
  labels:
    appName: flatnotes-released
spec:
  containers:
  - name: flatnotes
    image: dullage/flatnotes:latest
    ports:
    - containerPort: 8080
    volumeMounts: 
    - mountPath: /data
      name: nfs-storage
  volumes:
    - name: nfs-storage
      persistentVolumeClaim:
        claimName: nfs-pvc-released

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service-released
spec:
  type: NodePort
  selector:
    appName: flatnotes-released
  ports:
  - port: 8081
    targetPort: 8080
    nodePort: 30081



# Как переиспользовать освобожденный PV: https://serverfault.com/questions/1117063/how-to-create-pvc-using-existing-pv
