base/manifests/volume-emptydir.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes-pod
  labels:
    appName: flatnotes
spec:
  containers:
  - name: flatnotes
    image: dullage/flatnotes:latest
    ports:
    - containerPort: 8080
    volumeMounts: 
    - mountPath: /data # https://github.com/dullage/flatnotes?tab=readme-ov-file#self-hosted
      name: flatnotes-data
  volumes:
  - name: flatnotes-data
    
    # emptyDir — временный том, создаётся только на время жизни пода. Удобно использовать для тестирования или хранения временных данных. Когда pod удаляется, том типа emptyDir тоже удаляется и все данные пропадают
    emptyDir:
      sizeLimit: 1Mi
      medium: Memory

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service
spec:
  type: NodePort
  selector:
    appName: flatnotes
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080

# kubectl exec -it <pod> -- /bin/bash
# df -h
# После перезапуска подов, информация пропадает
