base/manifests/volume-nfs-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service
spec:
  type: NodePort
  selector:
    appName: flatnotes
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
