base/manifests/volume-nfs.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes-pod
  labels:
    appName: flatnotes
spec:
  containers:
  - name: flatnotes
    image: dullage/flatnotes:latest
    volumeMounts: 
    - mountPath: /data # https://github.com/dullage/flatnotes?tab=readme-ov-file#self-hosted
      name: nfs-volume
  volumes:
  - name: nfs-volume
    nfs:
      server: 192.168.0.1
      path: /nfs/flatnotes

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service
spec:
  type: NodePort
  selector:
    appName: flatnotes
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080

# Установить сервер: apt install -y nfs-kernel-server
# На все ноды установить: apt install -y nfs-common
# mkdir -p /nfs/flatnotes
# echo "/nfs/flatnotes  192.168.0.0/24(rw,sync,no_subtree_check,no_root_squash)" >> /etc/exports
# exportfs -a
