base/manifests/volume-pvc-multi.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes-pod-1
  labels:
    appName: flatnotes-1
spec:
  containers:
    - name: flatnotes
      image: dullage/flatnotes:latest
      ports:
        - containerPort: 8080
      volumeMounts: 
        - mountPath: /data
          name: nfs-storage
  volumes:
    - name: nfs-storage
      persistentVolumeClaim:
        claimName: pvc-1

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service-1
spec:
  type: NodePort
  selector:
    appName: flatnotes-1
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081



#################################################

---
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes-pod-2
  labels:
    appName: flatnotes-2
spec:
  containers:
    - name: flatnotes-2
      image: dullage/flatnotes:latest
      ports:
        - containerPort: 8080
      volumeMounts: 
        - mountPath: /data
          name: nfs-storage
  volumes:
    - name: nfs-storage
      persistentVolumeClaim:
        claimName: pvc-2

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service-2
spec:
  type: NodePort
  selector:
    appName: flatnotes-2
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30082



# Изменить в Service selector.appName=flatnotes. Поведение при обновлении страницы будет некорректное.
