base/manifests/volume-pve-single.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: flatnotes-pod
  labels:
    appName: flatnotes
spec:
  containers:
    - name: flatnotes
      image: dullage/flatnotes:latest
      ports:
        - containerPort: 8080
      volumeMounts: 
        - mountPath: /data
          name: nfs-storage
  volumes:
    - name: nfs-storage
      persistentVolumeClaim:
        claimName: pvc

---
apiVersion: v1
kind: Service
metadata:
  name: flatnotes-nodeport-service
spec:
  type: NodePort
  selector:
    appName: flatnotes
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080

# nano /etc/exports
# /nfs/pv-1  192.168.0.0/24(rw,sync,no_subtree_check,no_root_squash)
# /nfs/pv-2  192.168.0.0/24(rw,sync,no_subtree_check,no_root_squash)
# /nfs/pv-3  192.168.0.0/24(rw,sync,no_subtree_check,no_root_squash)
# exportfs -a
# kubectl get pv
